--- a/link.html
+++ b/link.html
@@ -17,9 +17,9 @@
         <a href="./index.html"><img src="./img/back button.png" alt="img" class="boton"></a>
         <div class="pantalla_baja"></div>
         <h1 class="titulo2">Cappadacia</h1>
-        <h2 class="titulo3"><img src="./img/Vector.png" alt="img" width="27rem"> 49 (review)</h2>
-        <h2 class="titulo4">5-7 days</h2>
-        <h2 class="titulo5">$ <b>2400</b></h2>
+        <h2 class="titulo3"><img src="./img/Vector.png" alt="img" width="22rem"> 49 (review)</h2>
+        <div class="titulo_4"><h2 class="titulo4"> 5-7days</h2></div>
+        <div class="titulo_5"><h2 class="titulo5">$ <b>2400</b></h2></div>
         <p class="texto">Cappadocia hot air balloon can be pricey but it all comes down <br>
                          to what you may want to be included in the price. The price to <br>
                          ride a hot air balloon is in the range between $140 and $250 <br>
@@ -27,10 +27,10 @@
                          The cost depends on the duration of the flight, the moment of <br>
                           the day and whether is peak season or not.</p>
         <div class="cuadros">
-            <div class="item4"> Now temp <br> <br> 29</div>
-            <div class="item4"> Max temp <br> <br> 10</div>
-            <div class="item4"> Avg temp <br> <br> 22</div>
-            <div class="item4"> Min temp <br> <br> -7</div>
+            <div class="item4"><h1>Now temp <br> <br> 29</h1></div>
+            <div class="item4"><h1> Max temp <br> <br> 10</h1></div>
+            <div class="item4"><h1> Avg temp <br> <br> 22</h1></div>
+            <div class="item4"><h1>Min temp <br> <br> -7</h1></div>
         </div>
         <div class="cuadro_final"> <h1 class="titulo_final">Book Now</h1></div>
     </div>
